--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+h1 {
+	color: #000088;
+	font-family: Verdana;
+	font-size: 150%
+}
